<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:text="@string/Heading1"
                android:textColor="#3F51B5"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/title_value"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/hint1"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:paddingLeft="0dp"
                android:paddingTop="8dp"
                android:paddingBottom="0dp"
                android:scrollbars="vertical"
                android:textColorHint="#8AA0D8"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:text="@string/Heading2"
                android:textColor="#3F51B5"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/desc_value"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint2"
                android:inputType="textMultiLine|textAutoCorrect"
                android:maxLines="15"
                android:paddingLeft="0dp"
                android:paddingTop="8dp"
                android:paddingRight="0dp"
                android:paddingBottom="8dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColorHint="#8AA0D8"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:text="@string/Heading3"
                android:textColor="#3F51B5"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/high"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/High" />

                <RadioButton
                    android:id="@+id/mid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Mid" />

                <RadioButton
                    android:id="@+id/low"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/Low" />
            </RadioGroup>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">
                <TextView
                    android:id="@+id/rem_time1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFFF00"
                    android:paddingLeft="5dp"
                    android:paddingTop="3dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="3dp"
                    android:text="ignore"
                    android:textColor="#000000"
                    android:textColorHighlight="#EAD40D"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/rem_date1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFFF00"
                    android:paddingLeft="5dp"
                    android:paddingTop="3dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="3dp"
                    android:text="ignore"
                    android:textColor="#000000"
                    android:textColorHighlight="#EAD40D"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_weight="0">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/cancel_button1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"

                    android:layout_marginTop="0dp"
                    android:layout_marginRight="23dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/black"
                    android:fontFamily="@font/aldrich"
                    android:onClick="close_act"
                    android:paddingLeft="7dp"
                    android:paddingTop="7dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="7dp"
                    android:text="CANCEL"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_update_button1"
                    android:layout_width="120dp"

                    android:layout_height="wrap_content"
                    android:layout_column="1"

                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/black"
                    android:fontFamily="@font/aldrich"
                    android:onClick="save_button_add_update"
                    android:paddingLeft="7dp"
                    android:paddingTop="7dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="7dp"
                    android:text="SAVE"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>